--- a/practicas/avatar/public/avatar.html
+++ b/practicas/avatar/public/avatar.html
@@ -7,6 +7,11 @@
     <title>LA LEYENDA DE AANG: AVATAR</title>
   </head>
   <body>
+    <div class="contenedor">
+      <section id="seccion1" class="fila"></section>
+      <section id="seccion2" class="fila"></section>
+      <section id="seccion3" class="fila"></section>
+    </div>
     <div class="reglas-juego">
       <h2>Reglas de juego</h2>
       <ul>
@@ -24,11 +29,11 @@
     </div>
 
     <div class="container">
-      <h1>AVATAR 🔥💧🌱🌪️</h1>
+    <h1><img src="logo_avatar.png" alt="AVATAR 🔥💧🌱🌪️" /></h1>
 
       <div class="select-personaje">
         <section id="seleccionar-personaje">
-            <h2>Elige tu Personaje</h2>
+            <h2>Elige tu personaje</h2>
             <input type="radio" name="personaje" id="zuko" />
             <label for="zuko">Zuko</label>
     
