Clase 3 de diseño responsivo

--- a/htmlycss/DiseñoWebResponsivo/columnas.html
+++ b/htmlycss/DiseñoWebResponsivo/columnas.html
@@ -4,14 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="columnas.css">
+    <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
     <title>Diseño Web Responsivo</title>
 </head>
 <body>
     <div class="contenedor">
         <header class="fila">
-            <div id="logo" class="col-log-2"></div>
+            <div id="logo" class="col-log-2">Logotipo</div>
             <div class="col-log-8"></div>
-            <div class="col-log-2"></div>
+            <div class="col-log-2">
+                <div class="col-lg-4">
+                    <center id="icono1">X</center>
+                </div>
+                <div class="col-lg-4">
+                    <center id="icono2">X</center>
+                </div>
+                <div class="col-lg-4">
+                    <center id="icono3">X</center>
+                </div>
+            </div>
         </header>
         <nav class="fila"></nav>
         <section id="seccion3" class="fila"></section>
