actualización del ecommerce para que renderice en el puerto 8080

--- a/JavaScript/E-COMMERCE2024/client/media/index.html
+++ b/JavaScript/E-COMMERCE2024/client/media/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/media/styles.css">
     <script src="https://sdk.mercadopago.com/js/v2"></script>
     <title>Document</title>
 </head>
@@ -30,9 +30,9 @@
         <p>&copy; BugBusters 2024</p>
     </footer>
 
-    <script src="/E-COMMERCE2024/client/js/products.js"></script>
-    <script src="/E-COMMERCE2024/client/js/index.js"></script>
-    <script src="/E-COMMERCE2024/client/js/cart.js"></script>
+    <script src="/js/products.js"></script>
+    <script src="/js/index.js"></script>
+    <script src="/js/cart.js"></script>
 
 </body>
 </html>
