Clase 4 de html y css

--- a/htmlycss/DiseñoWebResponsivo/columnas.html
+++ b/htmlycss/DiseñoWebResponsivo/columnas.html
@@ -1,33 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="columnas.css">
-    <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="columnas.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet" />
     <title>Diseño Web Responsivo</title>
 </head>
+
 <body>
     <div class="contenedor">
         <header class="fila">
-            <div id="logo" class="col-log-2">Logotipo</div>
-            <div class="col-log-8"></div>
-            <div class="col-log-2">
-                <div class="col-lg-4">
-                    <center id="icono1">X</center>
+            <div id="logo" class="col-log-2 col-md-2 col-sm-3 col-xs-12">
+                Logotipo
+            </div>
+            <div class="col-log-8 col-md-8 col-sm-6 col-xs-12 col-xs-0"></div>
+            <div class="col-lg-2 col-md-2 col-sm-3 col-xs-12">
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                    <center id="icono1">
+                        <p>x</p>
+                    </center>
                 </div>
-                <div class="col-lg-4">
-                    <center id="icono2">X</center>
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                    <center id="icono2">
+                        <p>x</p>
+                    </center>
                 </div>
-                <div class="col-lg-4">
-                    <center id="icono3">X</center>
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                    <center id="icono3">
+                        <p>x</p>
+                    </center>
                 </div>
             </div>
-        </header>
-        <nav class="fila"></nav>
-        <section id="seccion3" class="fila"></section>
-        <section id="seccion4" class="fila"></section>
-        <footer class="fila"></footer>
+        </header> 
+        <nav class="fila">
+            <ul>
+                <li class="col-log-2 col-md-2 col-sm-6 col-xs-12"><a href="#">Botón 1</a></li>
+                <li class="col-log-2 col-md-2 col-sm-6 col-xs-12"><a href="#">Botón 2</a></li>
+                <li class="col-log-2 col-md-2 col-sm-6 col-xs-12"><a href="#">Botón 3</a></li>
+                <li class="col-log-2 col-md-2 col-sm-6 col-xs-12"><a href="#">Botón 4</a></li>
+                <li class="col-log-2 col-md-2 col-sm-6 col-xs-12"><a href="#">Botón 5</a></li>
+                <li class="col-log-2 col-md-2 col-sm-6 col-xs-12"><a href="#">Botón 6</a></li>
+            </ul>
+        </nav>   
+    </div>
+    
+    <section id="seccion3" class="fila">
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+            <center>
+                <img src="assets/preview (1).webp">
+                <h1>Lorem Ipsum</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem
+                    quas sit iure doloribus dolorem culpa ab maxime nesciunt ea, atque voluptas unde?
+                    Nostrum, aliquid illo fugiat ut molestiae assumenda eum?</p>
+            </center>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+            <center>
+            <img src="assets/preview (2).webp">
+            <h1>Lorem Ipsum</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quas sit iure doloribus
+           dolorem culpa ab maxime nesciunt ea, atque voluptas unde? Nostrum, aliquid illo fugiat ut molestiae assumenda
+           eum?</p>
+            </center>
+           </div>
+           <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+            <center>
+            <img src="assets/preview.webp">
+            <h1>Lorem Ipsum</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quas sit iure
+           doloribus dolorem culpa ab maxime nesciunt ea, atque voluptas unde? Nostrum, aliquid illo fugiat ut molestiae
+           assumenda eum?</p>
+            </center>
+           </div>
+    </section>
+
+    <section id="seccion4" class="fila"></section>
+    
+    <footer class="fila"></footer>
     </div>
 </body>
+
 </html>
