Terminamos la página responsiva. Clase 5 de html y css

--- a/htmlycss/DiseñoWebResponsivo/columnas.html
+++ b/htmlycss/DiseñoWebResponsivo/columnas.html
@@ -33,7 +33,7 @@
                     </center>
                 </div>
             </div>
-        </header> 
+        </header>
         <nav class="fila">
             <ul>
                 <li class="col-log-2 col-md-2 col-sm-6 col-xs-12"><a href="#">Botón 1</a></li>
@@ -43,9 +43,9 @@
                 <li class="col-log-2 col-md-2 col-sm-6 col-xs-12"><a href="#">Botón 5</a></li>
                 <li class="col-log-2 col-md-2 col-sm-6 col-xs-12"><a href="#">Botón 6</a></li>
             </ul>
-        </nav>   
+        </nav>
     </div>
-    
+
     <section id="seccion3" class="fila">
         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
             <center>
@@ -58,28 +58,56 @@
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
             <center>
-            <img src="assets/preview (2).webp">
-            <h1>Lorem Ipsum</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quas sit iure doloribus
-           dolorem culpa ab maxime nesciunt ea, atque voluptas unde? Nostrum, aliquid illo fugiat ut molestiae assumenda
-           eum?</p>
+                <img src="assets/preview (2).webp">
+                <h1>Lorem Ipsum</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quas sit iure doloribus
+                    dolorem culpa ab maxime nesciunt ea, atque voluptas unde? Nostrum, aliquid illo fugiat ut molestiae
+                    assumenda
+                    eum?</p>
             </center>
-           </div>
-           <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
             <center>
-            <img src="assets/preview.webp">
-            <h1>Lorem Ipsum</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quas sit iure
-           doloribus dolorem culpa ab maxime nesciunt ea, atque voluptas unde? Nostrum, aliquid illo fugiat ut molestiae
-           assumenda eum?</p>
+                <img src="assets/preview.webp">
+                <h1>Lorem Ipsum</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quas sit iure
+                    doloribus dolorem culpa ab maxime nesciunt ea, atque voluptas unde? Nostrum, aliquid illo fugiat ut
+                    molestiae
+                    assumenda eum?</p>
             </center>
-           </div>
+        </div>
     </section>
 
-    <section id="seccion4" class="fila"></section>
-    
-    <footer class="fila"></footer>
-    </div>
+    <section id="seccion4" class="fila">
+        <aside id="izq" class="col-lg-3 col-md-3 col-sm-3  col-xs-12">
+            <ul>
+                <li><a href="#">link 1</a></li>
+                <li><a href="#">link 2</a></li>
+                <li><a href="#">link 3</a></li>
+                <li><a href="#">link 4</a></li>
+            </ul>
+        </aside>
+
+        <article class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+            <h1>Lorem Ipsum</h1>
+            <p><img src="assets/imagen-article.png">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis debitis, perspiciatis mollitia consectetur exercitationem soluta quae fugit illo et iste, quos inventore ab saepe omnis sapiente repellat laboriosam veritatis in?</p>
+            <br>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, exercitationem aliquid sint, accusamus quis reiciendis delectus adipisci perferendis ipsa odit tenetur eligendi aliquam esse error possimus nulla ipsam non! Vel.</p>
+        </article>
+
+        <aside id="der" class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+            <h1>ingreso</h1>
+            <form>
+                <input type="text" placeholder="Usuario">
+                <input type="password" placeholder="Contraseña">
+                <input type="submit" value=Enviar>
+            </form>
+        </aside>
+    </section>
+
+    <footer class="fila">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">&copy; Todos los derechos reservados.</div>
+    </footer>
 </body>
 
 </html>
