--- a/practicas/avatar/public/avatar.html
+++ b/practicas/avatar/public/avatar.html
@@ -34,7 +34,18 @@
             <div class="select-personaje">
                 <section id="seleccionar-personaje">
                     <h2>Elige tu personaje</h2>
-                    <div class="personajes-container" id="personajes-container"></div>
+                    <input type="radio" name="personaje" id="zuko" />
+                    <label for="zuko" id="zuko">Zuko</label>
+
+                    <input type="radio" name="personaje" id="katara" />
+                    <label for="katara" id="katara">Katara</label>
+
+                    <input type="radio" name="personaje" id="aang" />
+                    <label for="aang" id="aang">Aang</label>
+
+                    <input type="radio" name="personaje" id="toph" />
+                    <label for="toph" id="toph">Toph</label>
+                    <br />
                     <button id="boton-personaje">Seleccionar</button>
                     <button id="boton-volver-jugar">Volver</button>
                 </section>
@@ -71,6 +82,6 @@
             </section>
         </div>
 
-        <script type="module" src="js/avatar.js"></script>
+        <script src="js/avatar.js"></script>
     </body>
 </html>
