Clase 10 de sass

--- a/sass/proyecto-s/index.html
+++ b/sass/proyecto-s/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <nav class="navbar">
-        <p> lOGO</p>
+        <p>LOGO</p>
         <div class="icons">
             <button class="profile">
                 <svg width="36" height="36" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -35,13 +35,13 @@
 
     <main class="main-section">
         <article>
-            <div class=“objetivo-section">
+            <div class="objetivo-section">
                 <h2>INFORMACION</h2>
                 <p>DESCRIPCION DEL SITIO</p>
                 <button>Conocer mas</button>
             </div>
             <div class="image-section">
-                <img src="" alt="">
+                <img src="assets/img/main.jpg" alt="">
             </div>
         </article>
 
